--- a/BookSearch/SearchResult.xaml
+++ b/BookSearch/SearchResult.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BookSearch"
         mc:Ignorable="d"
-        Title="SearchResult" Height="510" Width="500" WindowStyle="None"
+        Title="SearchResult" Height="510" Width="500" WindowStyle="None" Loaded="Result_Loaded"
         
         >
     
@@ -33,7 +33,7 @@
                FontSize="12" FontFamily="Yu Gothic" HorizontalContentAlignment="Right"
                VerticalAlignment="Bottom" HorizontalAlignment="Left"/>
 
-        <Label Name="subTitle" Grid.Row="1" Height="30" Width="300" Margin="0,10,0,0"
+        <TextBox Name="subTitle" Text="{Binding subTitleInput}" Grid.Row="1" Height="30" Width="300" Margin="0,10,0,0"
                FontSize="17" FontFamily="Yu Gothic" VerticalContentAlignment="Bottom"
                BorderThickness="0,0,0,1" BorderBrush="Black" HorizontalContentAlignment="Left"
                VerticalAlignment="Top" HorizontalAlignment="Center"/>
@@ -41,7 +41,7 @@
                FontSize="12" FontFamily="Yu Gothic" HorizontalContentAlignment="Right"
                VerticalAlignment="Top" HorizontalAlignment="Left"/>
 
-        <Label Name="author" Grid.Row="1" Height="30" Width="300" Margin="0,0,0,10"
+        <TextBox Name="author" Text="{Binding authorInput}" Grid.Row="1" Height="30" Width="300" Margin="0,0,0,10"
                FontSize="17" FontFamily="Yu Gothic" VerticalContentAlignment="Bottom"
                BorderThickness="0,0,0,1" BorderBrush="Black" HorizontalContentAlignment="Left"
                VerticalAlignment="Bottom" HorizontalAlignment="Center"/>
@@ -49,7 +49,7 @@
                FontSize="12" FontFamily="Yu Gothic" HorizontalContentAlignment="Right"
                VerticalAlignment="Bottom" HorizontalAlignment="Left"/>
 
-        <Label Name="publisherName" Grid.Row="2" Height="30" Width="300" Margin="0,10,0,0"
+        <TextBox Name="publisherName" Text="{Binding publisherNameInput}" Grid.Row="2" Height="30" Width="300" Margin="0,10,0,0"
                FontSize="17" FontFamily="Yu Gothic" VerticalContentAlignment="Bottom"
                BorderThickness="0,0,0,1" BorderBrush="Black" HorizontalContentAlignment="Left"
                VerticalAlignment="Top" HorizontalAlignment="Center"/>
@@ -57,7 +57,7 @@
                FontSize="12" FontFamily="Yu Gothic" HorizontalContentAlignment="Right"
                VerticalAlignment="Top" HorizontalAlignment="Left"/>
 
-        <Label Name="salesDate" Grid.Row="2" Height="30" Width="300" Margin="0,0,0,10"
+        <TextBox Name="salesDate" Text="{Binding salesDateInput}" Grid.Row="2" Height="30" Width="300" Margin="0,0,0,10"
                FontSize="17" FontFamily="Yu Gothic" VerticalContentAlignment="Bottom"
                BorderThickness="0,0,0,1" BorderBrush="Black" HorizontalContentAlignment="Left"
                VerticalAlignment="Bottom" HorizontalAlignment="Center"/>
@@ -65,7 +65,7 @@
                FontSize="12" FontFamily="Yu Gothic" HorizontalContentAlignment="Right"
                VerticalAlignment="Bottom" HorizontalAlignment="Left"/>
 
-        <Label Name="itemPrice" Grid.Row="3" Height="30" Width="300" Margin="0,10,0,0"
+        <TextBox Name="itemPrice" Text="{Binding itemPriceInput}" Grid.Row="3" Height="30" Width="300" Margin="0,10,0,0"
                FontSize="17" FontFamily="Yu Gothic" VerticalContentAlignment="Bottom"
                BorderThickness="0,0,0,1" BorderBrush="Black" HorizontalContentAlignment="Left"
                VerticalAlignment="Top" HorizontalAlignment="Center"/>
@@ -73,7 +73,7 @@
                FontSize="12" FontFamily="Yu Gothic" HorizontalContentAlignment="Right"
                VerticalAlignment="Top" HorizontalAlignment="Left"/>
 
-        <Label Name="reviewAverage" Grid.Row="3" Height="30" Width="80" Margin="100,0,0,10"
+        <TextBox Name="reviewAverage" Text="{Binding reviewAverageInput}" Grid.Row="3" Height="30" Width="80" Margin="100,0,0,10"
                FontSize="17" FontFamily="Yu Gothic" VerticalContentAlignment="Bottom"
                BorderThickness="0,0,0,1" BorderBrush="Black" HorizontalContentAlignment="Left"
                VerticalAlignment="Bottom" HorizontalAlignment="Left"/>
@@ -84,8 +84,7 @@
                FontSize="12" FontFamily="Yu Gothic" HorizontalContentAlignment="Right"
                VerticalAlignment="Bottom" HorizontalAlignment="Left"/>
 
-
-        <Label Name="reviewCount" Grid.Row="4" Height="30" Width="80" Margin="100,10,0,0"
+        <TextBox Name="reviewCount" Text="{Binding reviewCountInput}" Grid.Row="4" Height="30" Width="80" Margin="100,10,0,0"
                FontSize="17" FontFamily="Yu Gothic" VerticalContentAlignment="Bottom"
                BorderThickness="0,0,0,1" BorderBrush="Black" HorizontalContentAlignment="Left"
                VerticalAlignment="Top" HorizontalAlignment="Left"/>
