--- a/BookSearch/SearchWindow.xaml
+++ b/BookSearch/SearchWindow.xaml
@@ -5,30 +5,41 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BookSearch"
         mc:Ignorable="d"
-        Title="SearchWindow" Height="200" Width="400" WindowStyle="None"
+        Title="SearchWindow" Height="600" Width="400" WindowStyle="None"
         >
-    
-    
+
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="115"/>
-            <RowDefinition Height="75"/>
+            <RowDefinition Height="30"/>
+            <RowDefinition Height="445"/>
         </Grid.RowDefinitions>
 
         <Label Content="タイトルを入力してください" 
                VerticalAlignment="Top" HorizontalAlignment="Center"
                Grid.Row="0" Height="30" Width="200" Margin="0,20,0,0"
                FontSize="15" FontFamily="Yu Gothic"/>
-        
+
         <TextBox Name="text" Grid.Row="0" Height="50" Width="300" Margin="0,0,0,10"
                  VerticalAlignment="Bottom" HorizontalAlignment="Center"
                  FontSize="17" FontFamily="Yu Gothic" VerticalContentAlignment="Bottom"
                  BorderThickness="0,0,0,1" BorderBrush="Black" Text="1"/>
 
-        <Button Name="search" Content="検索" Grid.Row="1" Height="30" Width="60" Margin="10"
+        <Button Name="search" Content="実行" Grid.Row="1" Height="30" Width="60"
                 HorizontalAlignment="Center" VerticalAlignment="Top" Click="search_Click"/>
 
-        <Button Name="return" Content="戻る" Grid.Row="1" Height="30" Width="60" Margin="10"
+        <Button Name="return" Content="戻る" Grid.Row="2" Height="30" Width="60" Margin="10"
                 HorizontalAlignment="Left" VerticalAlignment="Bottom" Click="return_Click"/>
+
+        <DataGrid Name="titleList" Grid.Row="2" Height="350" Width="300" Margin="0,20,0,0"
+                  AutoGenerateColumns="False" 
+                  HorizontalAlignment="Center" VerticalAlignment="Top">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="タイトル" Binding="{Binding Title}"/>
+            </DataGrid.Columns>
+        </DataGrid>
+
+        <Button Name="decision" Content="検索" Grid.Row="2" Height="30" Width="60" Margin="0,0,0,10"
+                HorizontalAlignment="Center" VerticalAlignment="Bottom" Click="decision_Click"/>
     </Grid>
 </Window>
