--- a/BookSearch/SearchResult.xaml
+++ b/BookSearch/SearchResult.xaml
@@ -28,7 +28,7 @@
         <TextBox Name="title" Text="{Binding titleInput}" Grid.Row="0" Height="30" Width="300" Margin="0,0,0,10"
                  FontSize="17" FontFamily="Yu Gothic" VerticalContentAlignment="Bottom"
                  BorderThickness="0,0,0,1" BorderBrush="Black" HorizontalContentAlignment="Left"
-                 VerticalAlignment="Bottom" HorizontalAlignment="Center"/>
+                 VerticalAlignment="Bottom" HorizontalAlignment="Center" IsReadOnly="True"/>
         <Label Content="タイトル" Grid.Row="0" Height="25" Width="80" Margin="10,0,0,10"
                FontSize="12" FontFamily="Yu Gothic" HorizontalContentAlignment="Right"
                VerticalAlignment="Bottom" HorizontalAlignment="Left"/>
@@ -36,7 +36,7 @@
         <TextBox Name="subTitle" Text="{Binding subTitleInput}" Grid.Row="1" Height="30" Width="300" Margin="0,10,0,0"
                FontSize="17" FontFamily="Yu Gothic" VerticalContentAlignment="Bottom"
                BorderThickness="0,0,0,1" BorderBrush="Black" HorizontalContentAlignment="Left"
-               VerticalAlignment="Top" HorizontalAlignment="Center"/>
+               VerticalAlignment="Top" HorizontalAlignment="Center" IsReadOnly="True"/>
         <Label Content="サブタイトル" Grid.Row="1" Height="25" Width="80" Margin="10,10,0,0"
                FontSize="12" FontFamily="Yu Gothic" HorizontalContentAlignment="Right"
                VerticalAlignment="Top" HorizontalAlignment="Left"/>
@@ -44,7 +44,7 @@
         <TextBox Name="author" Text="{Binding authorInput}" Grid.Row="1" Height="30" Width="300" Margin="0,0,0,10"
                FontSize="17" FontFamily="Yu Gothic" VerticalContentAlignment="Bottom"
                BorderThickness="0,0,0,1" BorderBrush="Black" HorizontalContentAlignment="Left"
-               VerticalAlignment="Bottom" HorizontalAlignment="Center"/>
+               VerticalAlignment="Bottom" HorizontalAlignment="Center" IsReadOnly="True"/>
         <Label Content="著者" Grid.Row="1" Height="25" Width="80" Margin="10,0,0,10"
                FontSize="12" FontFamily="Yu Gothic" HorizontalContentAlignment="Right"
                VerticalAlignment="Bottom" HorizontalAlignment="Left"/>
@@ -52,7 +52,7 @@
         <TextBox Name="publisherName" Text="{Binding publisherNameInput}" Grid.Row="2" Height="30" Width="300" Margin="0,10,0,0"
                FontSize="17" FontFamily="Yu Gothic" VerticalContentAlignment="Bottom"
                BorderThickness="0,0,0,1" BorderBrush="Black" HorizontalContentAlignment="Left"
-               VerticalAlignment="Top" HorizontalAlignment="Center"/>
+               VerticalAlignment="Top" HorizontalAlignment="Center" IsReadOnly="True"/>
         <Label Content="出版社" Grid.Row="2" Height="25" Width="80" Margin="10,10,0,0"
                FontSize="12" FontFamily="Yu Gothic" HorizontalContentAlignment="Right"
                VerticalAlignment="Top" HorizontalAlignment="Left"/>
@@ -60,7 +60,7 @@
         <TextBox Name="salesDate" Text="{Binding salesDateInput}" Grid.Row="2" Height="30" Width="300" Margin="0,0,0,10"
                FontSize="17" FontFamily="Yu Gothic" VerticalContentAlignment="Bottom"
                BorderThickness="0,0,0,1" BorderBrush="Black" HorizontalContentAlignment="Left"
-               VerticalAlignment="Bottom" HorizontalAlignment="Center"/>
+               VerticalAlignment="Bottom" HorizontalAlignment="Center" IsReadOnly="True"/>
         <Label Content="発売日" Grid.Row="2" Height="25" Width="80" Margin="10,0,0,10"
                FontSize="12" FontFamily="Yu Gothic" HorizontalContentAlignment="Right"
                VerticalAlignment="Bottom" HorizontalAlignment="Left"/>
@@ -68,7 +68,7 @@
         <TextBox Name="itemPrice" Text="{Binding itemPriceInput}" Grid.Row="3" Height="30" Width="300" Margin="0,10,0,0"
                FontSize="17" FontFamily="Yu Gothic" VerticalContentAlignment="Bottom"
                BorderThickness="0,0,0,1" BorderBrush="Black" HorizontalContentAlignment="Left"
-               VerticalAlignment="Top" HorizontalAlignment="Center"/>
+               VerticalAlignment="Top" HorizontalAlignment="Center" IsReadOnly="True"/>
         <Label Content="価格" Grid.Row="3" Height="25" Width="80" Margin="10,10,0,0"
                FontSize="12" FontFamily="Yu Gothic" HorizontalContentAlignment="Right"
                VerticalAlignment="Top" HorizontalAlignment="Left"/>
@@ -76,7 +76,7 @@
         <TextBox Name="reviewAverage" Text="{Binding reviewAverageInput}" Grid.Row="3" Height="30" Width="80" Margin="100,0,0,10"
                FontSize="17" FontFamily="Yu Gothic" VerticalContentAlignment="Bottom"
                BorderThickness="0,0,0,1" BorderBrush="Black" HorizontalContentAlignment="Left"
-               VerticalAlignment="Bottom" HorizontalAlignment="Left"/>
+               VerticalAlignment="Bottom" HorizontalAlignment="Left" IsReadOnly="True"/>
         <Label Content="レビュー平均" Grid.Row="3" Height="25" Width="80" Margin="10,0,0,10"
                FontSize="12" FontFamily="Yu Gothic" HorizontalContentAlignment="Right"
                VerticalAlignment="Bottom" HorizontalAlignment="Left"/>
@@ -87,7 +87,7 @@
         <TextBox Name="reviewCount" Text="{Binding reviewCountInput}" Grid.Row="4" Height="30" Width="80" Margin="100,10,0,0"
                FontSize="17" FontFamily="Yu Gothic" VerticalContentAlignment="Bottom"
                BorderThickness="0,0,0,1" BorderBrush="Black" HorizontalContentAlignment="Left"
-               VerticalAlignment="Top" HorizontalAlignment="Left"/>
+               VerticalAlignment="Top" HorizontalAlignment="Left" IsReadOnly="True"/>
         <Label Content="レビュー数" Grid.Row="4" Height="25" Width="80" Margin="10,10,0,0"
                FontSize="12" FontFamily="Yu Gothic" HorizontalContentAlignment="Right"
                VerticalAlignment="Top" HorizontalAlignment="Left"/>
