--- a/BookSearch/SearchWindow.xaml
+++ b/BookSearch/SearchWindow.xaml
@@ -20,7 +20,7 @@
                Grid.Row="0" Height="30" Width="200" Margin="0,20,0,0"
                FontSize="15" FontFamily="Yu Gothic"/>
 
-        <TextBox Name="text" Grid.Row="0" Height="50" Width="300" Margin="0,0,0,10"
+        <TextBox Name="text" Grid.Row="0" Height="30" Width="300" Margin="0,0,0,10"
                  VerticalAlignment="Bottom" HorizontalAlignment="Center"
                  FontSize="17" FontFamily="Yu Gothic" VerticalContentAlignment="Bottom"
                  BorderThickness="0,0,0,1" BorderBrush="Black" TextChanged="text_TextChanged"/>
@@ -32,14 +32,23 @@
                 HorizontalAlignment="Left" VerticalAlignment="Bottom" Click="return_Click"/>
 
         <ListView Name="list" Grid.Row="2" Height="300" Width="300" Margin="0,20,0,0"
-                  VerticalAlignment="Top" HorizontalAlignment="Center">
+                  VerticalAlignment="Top" HorizontalAlignment="Center"
+                  SelectionChanged="list_SelectionChanged" 
+                  AutomationProperties.IsColumnHeader="True" AutomationProperties.IsRowHeader="True">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="タイトル" DisplayMemberBinding="{Binding Title}"/>
                 </GridView>
             </ListView.View>
         </ListView>
-            
+
+        <Label Content="検索するタイトル" Grid.Row="2" Height="25" Width="300" Margin="0,0,0,90"
+               HorizontalAlignment="Center" VerticalAlignment="Bottom"/>
+
+        <TextBox x:Name="passTitle" Grid.Row="2" Height="35" Width="300" Margin="0,0,0,60"
+                 HorizontalAlignment="Center" VerticalAlignment="Bottom"
+                 FontSize="17" FontFamily="Yu Gothic" VerticalContentAlignment="Bottom"
+                 BorderThickness="1" BorderBrush="Black"/>
 
         <Button Name="decision" Content="検索" Grid.Row="2" Height="30" Width="60" Margin="0,0,0,10"
                 HorizontalAlignment="Center" VerticalAlignment="Bottom" Click="decision_Click"/>
