--- a/BookSearch/BookmarkWindow.xaml
+++ b/BookSearch/BookmarkWindow.xaml
@@ -5,10 +5,33 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BookSearch"
         mc:Ignorable="d"
-        Title="BookmarkWindow" Height="450" Width="800" WindowStyle="None">
-    <Grid>
-        <TextBox Text="search" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Button Name="return" Content="戻る" Height="50" Width="100" Margin="10"
-                HorizontalAlignment="Right" VerticalAlignment="Bottom" Click="return_Click"/>
+        ResizeMode="NoResize"
+        Title="BookmarkWindow" Height="350" Width="800" WindowStyle="None" Loaded="Bookmark_Loaded">
+    <Window.Resources>
+        <local:infosys202215DataSet x:Key="infosys202215DataSet"/>
+        <CollectionViewSource x:Key="bookMarkViewSource" Source="{Binding BookMark, Source={StaticResource infosys202215DataSet}}"/>
+    </Window.Resources>
+
+    <Grid DataContext="{StaticResource bookMarkViewSource}">
+        <Button Name="return" Content="戻る" Height="30" Width="60" Margin="10,0,0,10"
+                HorizontalAlignment="Left" VerticalAlignment="Bottom" Click="return_Click"/>
+        <Button Name="delete" Content="削除" Height="30" Width="60" Margin="0,0,10,10"
+                HorizontalAlignment="Right" VerticalAlignment="Bottom" Click="delete_Click"/>
+        <DataGrid x:Name="bookMarkDataGrid" Height="280" Width="680" Margin="0,10,0,0"
+                  HorizontalAlignment="Center" VerticalAlignment="Top" EnableRowVirtualization="True"
+                  ItemsSource="{Binding}" RowDetailsVisibilityMode="VisibleWhenSelected" AutoGenerateColumns="False" SelectionMode="Single"
+                  >
+            <DataGrid.Columns>
+                <DataGridTextColumn x:Name="idColumn" Binding="{Binding Id}" Header="Id" IsReadOnly="True" Width="SizeToHeader"/>
+                <DataGridTextColumn x:Name="titleColumn" Binding="{Binding Title}" Header="タイトル" Width="SizeToHeader"/>
+                <DataGridTextColumn x:Name="subTitleColumn" Binding="{Binding SubTitle}" Header="サブタイトル" Width="SizeToHeader"/>
+                <DataGridTextColumn x:Name="authorColumn" Binding="{Binding Author}" Header="著者" Width="SizeToHeader"/>
+                <DataGridTextColumn x:Name="publisherNameColumn" Binding="{Binding PublisherName}" Header="出版社" Width="SizeToHeader"/>
+                <DataGridTextColumn x:Name="salesDateColumn" Binding="{Binding SalesDate}" Header="発売日" Width="SizeToHeader"/>
+                <DataGridTextColumn x:Name="priceColumn" Binding="{Binding Price}" Header="価格" Width="SizeToHeader"/>
+                <DataGridTextColumn x:Name="reviewAverageColumn" Binding="{Binding ReviewAverage}" Header="レビュー平均" Width="SizeToHeader"/>
+                <DataGridTextColumn x:Name="reviewCountColumn" Binding="{Binding ReviewCount}" Header="レビュー数" Width="SizeToHeader"/>
+            </DataGrid.Columns>
+        </DataGrid>
     </Grid>
 </Window>
