--- a/BookSearch/HistoryWindow.xaml
+++ b/BookSearch/HistoryWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BookSearch"
         mc:Ignorable="d"
+        ResizeMode="NoResize"
         Title="HistoryWindow" Height="450" Width="800" WindowStyle="None">
     <Grid>
         <TextBox Text="search" HorizontalAlignment="Center" VerticalAlignment="Center"/>
