--- a/BookSearch/LoginWindow.xaml
+++ b/BookSearch/LoginWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BookSearch"
         mc:Ignorable="d"
+        ResizeMode="NoResize"
         Title="LoginWindow" Height="350" Width="350" WindowStyle="None">
 
     <Grid>
