--- a/BookSearch/MainWindow.xaml
+++ b/BookSearch/MainWindow.xaml
@@ -6,6 +6,7 @@
         xmlns:local="clr-namespace:BookSearch"
         xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls" x:Name="TitleWindow" x:Class="BookSearch.MainWindow"
         mc:Ignorable="d"
+    ResizeMode="NoResize"
         Title="MainWindow" Height="400" Width="550" >
     <Grid Background="White">
         <Button Name="login" Content="ログイン" FontSize="12" FontFamily="Yu Mincho" HorizontalAlignment="Left" Margin="222,267,0,0" VerticalAlignment="Top" Width="75" Background="#FFB9F9E5" Click="login_Click" Foreground="#DDFF0000"/>
