--- a/BookSearch/MenuWindow.xaml
+++ b/BookSearch/MenuWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BookSearch"
         mc:Ignorable="d"
+        ResizeMode="NoResize"
         Title="MenuWindow" Height="350" Width="600" WindowStyle="None">
     <Grid>
         <Grid.RowDefinitions>
