--- a/BookSearch/SearchWindow.xaml
+++ b/BookSearch/SearchWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BookSearch"
         mc:Ignorable="d"
+        ResizeMode="NoResize"
         Title="SearchWindow" Height="600" Width="400" WindowStyle="None"
         >
 
@@ -22,7 +23,7 @@
 
         <TextBox Name="text" Grid.Row="0" Height="30" Width="300" Margin="0,0,0,10"
                  VerticalAlignment="Bottom" HorizontalAlignment="Center"
-                 FontSize="17" FontFamily="Yu Gothic" VerticalContentAlignment="Bottom"
+                 FontSize="16" FontFamily="Yu Gothic" VerticalContentAlignment="Bottom"
                  BorderThickness="0,0,0,1" BorderBrush="Black" TextChanged="text_TextChanged"/>
 
         <Button Name="search" Content="実行" Grid.Row="1" Height="30" Width="60"
@@ -37,7 +38,7 @@
                   AutomationProperties.IsColumnHeader="True" AutomationProperties.IsRowHeader="True">
             <ListView.View>
                 <GridView>
-                    <GridViewColumn Header="タイトル" DisplayMemberBinding="{Binding Title}"/>
+                    <GridViewColumn x:Name="a" Header="タイトル" DisplayMemberBinding="{Binding Title}"/>
                 </GridView>
             </ListView.View>
         </ListView>
