--- a/BookSearch/LoginWindow.xaml
+++ b/BookSearch/LoginWindow.xaml
@@ -6,8 +6,8 @@
         xmlns:local="clr-namespace:BookSearch"
         mc:Ignorable="d"
         ResizeMode="NoResize"
-        Title="LoginWindow" Height="350" Width="350" WindowStyle="None">
-
+        Title="LoginWindow" Height="330" Width="350" WindowStyle="None">
+    
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="100"/>
@@ -34,5 +34,8 @@
         <Button Grid.Row="2" Name="Login" Content="ログイン" 
                 Height="30" Width="70" FontSize="13" Margin="10"
                 HorizontalAlignment="Right" VerticalAlignment="Bottom" Click="Login_Click"/>
+        <Button Grid.Row="2" Name="newRegi" Content="新規登録"
+                Height="30" Width="85" FontSize="13" Margin="10"
+                HorizontalAlignment="Center" VerticalAlignment="Bottom" Click="newRegi_Click"/>
     </Grid>
 </Window>
