--- a/BookSearch/RegistWindow.xaml
+++ b/BookSearch/RegistWindow.xaml
@@ -6,13 +6,17 @@
         xmlns:local="clr-namespace:BookSearch"
         mc:Ignorable="d"
         ResizeMode="NoResize"
-        Title="RegistWindow" Height="350" Width="300" WindowStyle="None">
-    <Grid>
+        Title="RegistWindow" Height="350" Width="300" WindowStyle="None" Loaded="Regist_Loaded">
+    <Window.Resources>
+        <local:infosys202215DataSet2 x:Key="infosys202215DataSet2"/>
+        <CollectionViewSource x:Key="userLoginViewSource" Source="{Binding UserLogin, Source={StaticResource infosys202215DataSet2}}"/>
+    </Window.Resources>
 
+    <Grid DataContext="{StaticResource userLoginViewSource}">
         <Grid.RowDefinitions>
             <RowDefinition Height="80"/>
-            <RowDefinition Height="200"/>
-            <RowDefinition Height="70"/>
+            <RowDefinition Height="220"/>
+            <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
 
         <Button Grid.Row="2" Name="Return" Content="戻る"
@@ -23,17 +27,48 @@
                 HorizontalAlignment="Right" VerticalAlignment="Bottom" Click="regist_Click"/>
         <Label Content="新規登録" Grid.Row="0" FontSize="30"
                  VerticalAlignment="Center" HorizontalAlignment="Center"/>
-        
-        <Label Content="IDとなる〈UserName〉を入力してください" Grid.Row="1" Margin="20,0,0,0"
-               VerticalAlignment="Top"/>
-        <TextBox x:Name="name" Grid.Row="1" Height="30" Width="200" Margin="50,40,0,0"
-                 VerticalAlignment="Top" HorizontalAlignment="Left" FontSize="15" FontFamily="Yu Gothic"
-                 BorderThickness="1,1,1,1"/>
 
-        <Label Content="PassWordを入力してください" Grid.Row="1" Margin="20,0,0,80"
-               VerticalAlignment="Bottom"/>
-        <TextBox x:Name="pass" Grid.Row="1" Height="30" Width="200" Margin="50,0,0,35"
-                 VerticalAlignment="Bottom" HorizontalAlignment="Left" FontSize="15" FontFamily="Yu Gothic"
-                 BorderThickness="1,1,1,1"/>
+        <Label Content="〈ユーザー名〉" Grid.Row="1" Margin="50,0,0,0"
+               VerticalAlignment="Top" HorizontalAlignment="Left" FontSize="11" FontFamily="Yu Gothic"
+               Height="23" Width="80"/>
+        <TextBox x:Name="name" Grid.Row="1" Height="25" Width="200" Margin="50,20,0,0"
+                 VerticalAlignment="Top" HorizontalAlignment="Left" FontSize="11" FontFamily="Yu Gothic"
+                 BorderThickness="1,1,1,1" InputMethod.IsInputMethodEnabled="False"/>
+        <Label Content="半角英字、数字で入力してください" Grid.Row="1" Margin="50,43,0,0"
+               VerticalAlignment="Top" HorizontalAlignment="Left" FontSize="11" FontFamily="Yu Gothic"
+               Height="23" Width="185"/>
+
+        <Label Content="〈パスワード〉" Grid.Row="1" Margin="50,0,0,103"
+               VerticalAlignment="Bottom" HorizontalAlignment="Left" FontSize="11" FontFamily="Yu Gothic"
+               Height="23" Width="80"/>
+        <PasswordBox x:Name="passDenote" Grid.Row="1" Height="25" Width="200" Margin="50,0,0,80"
+                     VerticalAlignment="Bottom" HorizontalAlignment="Left" FontSize="11" FontFamily="Yu Gothic"
+                     BorderThickness="1,1,1,1"/>
+        <TextBox x:Name="passHide" Grid.Row="1" Height="25" Width="200" Margin="50,0,0,80"
+                 VerticalAlignment="Bottom" HorizontalAlignment="Left" FontSize="11" FontFamily="Yu Gothic"
+                 BorderThickness="1,1,1,1" Visibility="Hidden"/>
+        <Label Content="半角英字、数字を組み合わせて8文字以上、16文字"
+               Grid.Row="1" Margin="50,0,0,60"
+               VerticalAlignment="Bottom" HorizontalAlignment="Left"
+               FontSize="11" FontFamily="Yu Gothic" Height="23" Width="200"/>
+        <Label Content="内で入力してください"
+               Grid.Row="1" Margin="50,0,0,48"
+               VerticalAlignment="Bottom" HorizontalAlignment="Left"
+               FontSize="11" FontFamily="Yu Gothic" Height="23" Width="200"/>
+        
+        <PasswordBox x:Name="confirm" Grid.Row="1" Height="25" Width="200"
+                     FontSize="11" FontFamily="Yu Gothic" Margin="0,0,0,25"
+                     VerticalAlignment="Bottom" BorderThickness="1,1,1,1"/>
+
+        <TextBox Name="denote" Height="25" Width="200" Grid.Row="1" Margin="0,0,0,25"
+                 VerticalAlignment="Bottom" BorderThickness="1,1,1,1"
+                 Visibility="Hidden"/>
+
+        <Button x:Name="hide" Grid.Row="1" Height="25" Width="25" Margin="0,0,20,25"
+                VerticalAlignment="Bottom" HorizontalAlignment="Right" Click="hide_Click">
+            <Button.Background>
+                <ImageBrush ImageSource="me.jpg" Stretch="UniformToFill"/>
+            </Button.Background>
+        </Button>
     </Grid>
 </Window>
